Fixed hero height jumping around

--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -1,12 +1,12 @@
 .hero
 {
     width: 100%;
-    height: 100vh;
+    height: var(--inner-height);
     background-image: url('/assets/img/hero.jpg');
     background-color: #000a;
     background-blend-mode: multiply;
     background-size: cover;
-    background-size: 100% 100vh;
+    background-size: 100% 100%;
     background-attachment: fixed;
     background-repeat: no-repeat;
     position: relative;
